--- a/css/main.css
+++ b/css/main.css
@@ -4,11 +4,27 @@
     box-sizing: border-box;
 }
 header{
-    max-height: 100vh;
+    height: 100vh;
     overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+h1{
+    text-shadow: 3px 2px black;
+    text-transform: uppercase;
+    background-color: transparent;
+    text-align: center;
+    color: white;
+    font-size: 4rem;
 }
 
 #flag{
+    z-index: -1;
+    position: absolute;
+    top: 0;
+    left: 0;
     object-fit: cover;
     width: 100%;
     height: 100vh;
