--- a/css/main.css
+++ b/css/main.css
@@ -51,7 +51,7 @@ header{
 
 #menu:hover{
     background-color: rgb(66, 66, 66);
-    border: 1px solid white;
+    border: 1px solid rgb(255, 64, 41);
     border-radius: 12px;
 }
 
@@ -64,19 +64,44 @@ header{
 }
 
 #menuList{
+    display: none;
+    border-right: 1px solid rgb(255, 64, 41);
     position: absolute;
     top: 0;
     left: 0;
     height: 100vh;
-    width: 20vw;
     background-color: rgb(14, 18, 26);
     z-index: 2;
+    width: 20vw;
+    animation: menuList 0.6s linear;
+}
+
+@keyframes menuList {
+    0%{
+        width: 1vw;
+    }
+
+    100%{
+        width: 20vw;
+    }
 }
 
 #menuList nav{
+    display: none;
     padding-top: 3rem;
     padding-left: 1rem;
     padding-right: 1rem;
+    animation: menuListNav 0.5s linear;
+}
+
+@keyframes menuListNav {
+    0%{
+        opacity: 0;
+    }
+
+    100%{
+        opacity: 1;
+    }
 }
 
 #menuList li{
