--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,17 @@
     box-sizing: border-box;
     cursor: url("../images/Belgium_Flag_Cursor.png"), auto;
 }
+
+:root {
+    --yellow: rgb(240, 219, 24);
+    --yellowHover: rgb(197, 179, 19);
+    --black: rgb(44, 43, 43);
+    --blackHover: rgb(66, 66, 66);
+    --blackMenuList: rgb(14, 18, 26);
+    --red: rgb(255, 64, 41);
+    --white: #ffffff;
+}
+
 a,button,#menu, #menu > span{
     cursor: url("../images/Belgium_Flag_Pointer.png"), pointer;
 }
@@ -35,7 +46,7 @@ header{
 }
 
 #mainTitle > h1::selection{
-    background-color: rgb(255, 64, 41);
+    background-color: var(--red);
 }
 
 #menu{
@@ -45,7 +56,7 @@ header{
     height: 2.5rem;
     margin: 1rem;
     border-radius: 10px;
-    background-color: rgb(44, 43, 43);
+    background-color: var(--black);
     border: 1px solid black;
     padding-left: 10px;
     padding-right: 10px;
@@ -54,30 +65,31 @@ header{
 }
 
 #menu:hover{
-    background-color: rgb(66, 66, 66);
-    border: 1px solid rgb(255, 64, 41);
+    background-color: var(--blackHover);
+    border: 1px solid var(--red);
     border-radius: 12px;
 }
 
 #menu > span{
     display: block;
     height: 2px;
-    background-color: white;
+    background-color: var(--white);
     margin: 8px 0 8px 0;
     border-radius: 5px;
 }
 
 #menuList{
     display: none;
-    border-right: 1px solid rgb(255, 64, 41);
+    border-right: 1px solid var(--red);
     position: absolute;
     top: 0;
     left: 0;
     height: 100vh;
-    background-color: rgb(14, 18, 26);
+    background-color: var(--blackMenuList);
     z-index: 2;
     width: 20vw;
     animation: menuList 0.6s linear;
+    transition: all 0.6s linear;
 }
 
 @keyframes menuList {
@@ -116,28 +128,28 @@ header{
 }
 
 #menuList li:hover{
-    background-color: rgb(240, 219, 24);
+    background-color: var(--yellow);
     border-radius: 1rem;
 }
 
 #menuList li:active{
-    background-color: rgb(197, 179, 19);
+    background-color: var(--yellowHover);
     border-radius: 1rem;
 }
 
 #menuList li:hover a{
-    color: rgb(14, 18, 26);
+    color: var(--black);
 }
 
 
 #menuList a::selection{
-    background-color: rgb(255, 64, 41);
+    background-color: var(--red);
 }
 
 #menuList a{
     font-size: 2rem;
     text-decoration: none;
-    color: white;
+    color: var(--white);
 }
 
 
