--- a/css/main.css
+++ b/css/main.css
@@ -199,7 +199,7 @@ footer{
     bottom: 0;
     right: 0;
     height: 50vh;
-    background-color: var(--blackMenuList);*
+    background-color: var(--blackMenuList);
 }
 
 footer span{
