--- a/css/main.css
+++ b/css/main.css
@@ -176,7 +176,7 @@ header{
 
 #content h2{
     color: var(--black);
-    font-size: 1.5rem;
+    font-size: 1.6rem;
     background-color: var(--yellow);
     padding: 0.5rem 0 0.5rem 1rem;
     border-bottom: 1px solid red;
@@ -204,8 +204,8 @@ header{
     border-bottom: 1px solid var(--red);
     border-right: 1px solid var(--red);
     border-left: 1px solid var(--red);
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 0.6rem;
+    border-bottom-right-radius: 0.6rem;
 }
 
 #content p{
@@ -244,7 +244,11 @@ footer span{
 footer article{
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: center;
+}
+
+footer article section{
+    margin: 0rem 3rem 0 3rem;
 }
 
 footer h5{
@@ -285,4 +289,12 @@ footer p{
     padding-bottom: 1rem;
     padding-top: 1rem;
     background-color: var(--blackMenuList);
+}
+
+#logo{
+    width: 15%;
+}
+
+#logoImage{
+    filter: brightness(0) invert(1);
 }
