--- a/css/main.css
+++ b/css/main.css
@@ -228,17 +228,14 @@ header {
   width: 100%;
   font-size: 1.1rem;
   padding: 2rem 1rem 2rem 1rem;
-  border-bottom: 1px solid var(--red);
-  border-right: 1px solid var(--red);
-  border-left: 1px solid var(--red);
-  border-bottom-left-radius: 0.6rem;
-  border-bottom-right-radius: 0.6rem;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(255, 255, 255, 0.9);
+  border-radius: 5px;
 }
 
 #content p {
   font-family: "Inter", sans-serif;
   font-size: 1.2rem;
+  text-align: justify;
 }
 
 #content {
@@ -247,6 +244,10 @@ header {
 
 #contentTitle {
   text-align: center;
+}
+
+#contentTitle h2:hover {
+  border-radius: 1rem;
 }
 
 #contentTitle h2 {
