--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,10 @@ a img {
 .ionicon {
   fill: white;
 }
+
+body{
+  overflow-x: hidden;
+}
 /*----------HEADER----------*/
 header {
   position: relative;
@@ -176,7 +180,7 @@ header {
   position: absolute;
   left: -250px;
   bottom: -250px;
-  z-index: -1;
+  z-index: -2;
 }
 
 #atonium img {
@@ -187,7 +191,25 @@ header {
   position: absolute;
   right: -100px;
   bottom: 0;
+  z-index: -2;
+}
+
+#cloud img{
+  position: absolute;
   z-index: -1;
+  bottom: 0;
+  left: 0;
+  animation: cloud 15s linear infinite;
+}
+
+@keyframes cloud {
+  0%{
+    left: -2100px;
+  }
+
+  100%{
+    left: 2000px;
+  }
 }
 
 #index {
@@ -228,7 +250,7 @@ header {
   width: 100%;
   font-size: 1.1rem;
   padding: 2rem 1rem 2rem 1rem;
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: rgb(253, 253, 253, 0.9);
   border-radius: 5px;
 }
 
