--- a/css/galerie.css
+++ b/css/galerie.css
@@ -41,8 +41,78 @@ main {
   background-color: white;
   position: relative;
   z-index: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #content {
   width: 65%;
+}
+
+#timeline img {
+  cursor: url("../images/Belgium_Flag_Pointer.png"), pointer;
+  width: 20%;
+}
+
+#backgroundViewImage {
+  display: none;
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  z-index: 4;
+  top: 0;
+  left: 0;
+  background-color: rgba(15, 15, 15, 0.9);
+}
+
+#viewImage {
+  display: none;
+  position: fixed;
+  width: 60vw;
+  height: 100vh;
+  z-index: 4;
+  top: 0;
+  left: 20vw;
+}
+
+#buttonClose {
+  position: absolute;
+  cursor: url("../images/Belgium_Flag_Pointer.png"), pointer;
+  top: 2rem;
+  left: 2rem;
+  width: 5rem;
+  height: 5rem;
+  background-image: url(../images/galerie/remove.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+}
+
+#buttonClose:hover {
+  background-image: url(../images/galerie/remove_hover.png);
+}
+
+#viewImage section {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+#viewImage section img:nth-child(2) {
+  width: 60%;
+}
+
+#viewImage section img:nth-child(1) {
+  cursor: url("../images/Belgium_Flag_Pointer.png"), pointer;
+  margin-right: 3vw;
+  width: 12%;
+}
+
+#viewImage section img:nth-child(3) {
+  cursor: url("../images/Belgium_Flag_Pointer.png"), pointer;
+  margin-left: 3vw;
+  width: 12%;
 }
