--- a/css/galerie.css
+++ b/css/galerie.css
@@ -62,6 +62,10 @@ main {
   transition: transform 120s linear;
 }
 
+#timeline img::selection {
+  background-color: transparent;
+}
+
 #timeline img.notransition {
   transition: none;
 }
