--- a/css/galerie.css
+++ b/css/galerie.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "garamond";
+  src: url("../fonts/garamond.ttf");
+}
+
 header nav {
   position: fixed;
   z-index: 3;
@@ -15,7 +20,7 @@ header nav {
 header nav li {
   list-style-type: none;
   display: inline-block;
-  margin: 0 0.5rem 0 0.5rem;
+  margin: 0 1rem 0 1rem;
 }
 
 header nav li a {
@@ -38,12 +43,22 @@ header nav li a.selected {
 
 main {
   margin-top: 3.5rem;
-  background-color: white;
   position: relative;
   z-index: 2;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: rgb(0, 0, 0);
+  overflow: hidden;
+  box-shadow: 0 10px 10px #16181b;
+}
+
+main video {
+  position: absolute;
+  top: -18%;
+  right: -6%;
+  bottom: 0;
+  width: 60%;
 }
 
 #timeline {
@@ -51,14 +66,25 @@ main {
   z-index: 2;
 }
 
+#timeline h3 {
+  font-size: 2.5rem;
+  color: var(--white);
+  text-align: center;
+  padding-top: 1.5rem;
+  padding-bottom: 1rem;
+  text-shadow: 2px 2px black;
+  font-family: "garamond", sans-serif;
+}
+
 #content {
   width: 65%;
+  padding-bottom: 1rem;
 }
 
 #timeline img {
   cursor: url("../images/Belgium_Flag_Pointer.png"), pointer;
-  margin: 0 0.5% 0 0;
-  width: 20%;
+  margin: 0 1.5% 0 0;
+  width: 30%;
   transition: transform 120s linear;
 }
 
@@ -135,4 +161,107 @@ main {
   cursor: url("../images/Belgium_Flag_Pointer.png"), pointer;
   margin-left: 3vw;
   width: 12%;
+}
+
+/* FOOTER */
+
+footer {
+  font-family: "Inter", sans-serif;
+}
+
+footer {
+  position: relative;
+  height: 35vh;
+  background-color: var(--footer);
+}
+
+#skyline {
+  position: absolute;
+  bottom: 4.5rem;
+  width: 100vw;
+  text-align: center;
+  z-index: 1;
+  transform: scale(1.4);
+}
+
+footer span {
+  font-size: 2rem;
+  font-weight: bold;
+  color: var(--white);
+  letter-spacing: 0.3rem;
+  display: block;
+  text-align: center;
+  padding: 3rem;
+}
+
+#propos {
+  width: 100%;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  margin-top: 3.5%;
+  margin-left: 3%;
+}
+
+#link {
+  position: absolute;
+  right: 6%;
+  margin-top: 2.5%;
+}
+
+footer article {
+  position: relative;
+}
+
+footer h5 {
+  color: red;
+  font-size: 2rem;
+}
+
+footer h5::selection {
+  background-color: var(--yellow);
+}
+
+footer li {
+  list-style-type: none;
+  cursor: url("../images/Belgium_Flag_Pointer.png"), pointer;
+}
+
+footer li:hover a {
+  color: var(--yellow);
+}
+
+footer li a {
+  font-size: 1.4rem;
+  text-decoration: none;
+  color: var(--white);
+}
+
+footer p {
+  color: var(--white);
+  font-size: 1.2rem;
+}
+
+#copyright {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 2;
+  text-align: center;
+  padding-bottom: 1rem;
+  padding-top: 1rem;
+  background-color: var(--blackMenuList);
+}
+
+#logo {
+  width: 15%;
+  position: absolute;
+  left: 3%;
+  margin-top: 2.5%;
+}
+
+#logoImage {
+  width: 250px;
+  filter: brightness(0) invert(1);
 }
