--- a/css/entreprise.css
+++ b/css/entreprise.css
@@ -42,6 +42,92 @@ main {
   margin-top: 3rem;
 }
 
+#card {
+  width: 300px;
+  height: 450px;
+  background: linear-gradient(
+    90deg,
+    rgba(0, 0, 255, 1) 0%,
+    rgba(200, 200, 200, 1) 45%,
+    rgba(200, 200, 200, 1) 55%,
+    rgba(255, 0, 0, 1) 100%
+  );
+  font-family: "Inter", sans-serif;
+  border-radius: 1rem;
+  border: 3px solid black;
+  box-shadow: 5px 3px 10px rgba(0, 0, 0, 0.6);
+}
+
+#social-media {
+  background-color: rgba(19, 19, 19, 0.2);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 6%;
+}
+
+#social-media a {
+  text-align: center;
+}
+
+#social-media img {
+  width: 40%;
+}
+
+#card hr {
+  width: 85%;
+  margin-left: 7.5%;
+  margin-top: 10%;
+}
+
+#description {
+  width: 65%;
+  margin-left: 17.5%;
+  border-radius: 0.5rem;
+  background: rgba(19, 19, 19, 0.2);
+}
+
+#description p {
+  text-align: center;
+  color: white;
+  font-size: 1rem;
+}
+
+#card span {
+  display: block;
+  text-align: center;
+  margin-top: 2rem;
+  font-size: 1.5rem;
+  color: white;
+  font-weight: bold;
+}
+
+#card #profile {
+  position: relative;
+  text-align: center;
+}
+
+#card #profile img {
+  margin-top: 20px;
+  border-radius: 6rem;
+}
+
+#card #profile::before {
+  content: "";
+  position: absolute;
+  width: 220px;
+  height: 220px;
+  border-radius: 8rem;
+  border: 4px solid white;
+  top: 3%;
+  left: 48.5%;
+  transform: translateX(-110px);
+}
+
+#interview {
+  margin-top: 1rem;
+}
+
 /* FOOTER */
 
 footer {
