--- a/css/entreprise.css
+++ b/css/entreprise.css
@@ -1,3 +1,15 @@
+* {
+  cursor: url("../images/France_Flag_Cursor.png"), auto;
+}
+
+a,
+button,
+#menu,
+#menu > span,
+a img {
+  cursor: url("../images/France_Flag_Pointer.png"), pointer;
+}
+
 /* HEADER */
 header nav {
   position: fixed;
@@ -30,11 +42,11 @@ header nav li a:visited {
 }
 
 header nav li a:hover {
-  color: var(--yellow);
+  color: var(--blue);
 }
 
 header nav li a.selected {
-  color: var(--yellow);
+  color: var(--red);
 }
 /* MAIN */
 
@@ -43,6 +55,7 @@ main {
 }
 
 #card {
+  display: inline-block;
   width: 300px;
   height: 450px;
   background: linear-gradient(
@@ -56,6 +69,11 @@ main {
   border-radius: 1rem;
   border: 3px solid black;
   box-shadow: 5px 3px 10px rgba(0, 0, 0, 0.6);
+  transition: 0.6s ease-in-out;
+}
+
+#card:hover {
+  transform: rotateX(20deg) rotateY(0deg) rotateZ(0deg);
 }
 
 #social-media {
@@ -66,11 +84,12 @@ main {
   margin-top: 6%;
 }
 
-#social-media a {
+#social-media div {
   text-align: center;
 }
 
 #social-media img {
+  margin-top: 3%;
   width: 40%;
 }
 
@@ -126,6 +145,14 @@ main {
 
 #interview {
   margin-top: 1rem;
+}
+
+#presentation section:nth-child(2) {
+  width: 60%;
+  margin-left: 5%;
+  margin-top: 2%;
+  display: inline-block;
+  vertical-align: top;
 }
 
 /* FOOTER */
