--- a/css/entreprise.css
+++ b/css/entreprise.css
@@ -56,6 +56,13 @@ header nav li a.selected {
 
 main {
   margin-top: 3rem;
+  background: linear-gradient(
+    120deg,
+    rgba(0, 0, 255, 1) 0%,
+    rgba(200, 200, 200, 1) 45%,
+    rgba(200, 200, 200, 1) 55%,
+    rgba(255, 0, 0, 1) 100%
+  );
 }
 
 #card {
@@ -69,15 +76,14 @@ main {
     rgba(200, 200, 200, 1) 55%,
     rgba(255, 0, 0, 1) 100%
   );
-  font-family: "Inter", sans-serif;
   border-radius: 1rem;
   border: 3px solid black;
   box-shadow: 5px 3px 10px rgba(0, 0, 0, 0.6);
-  transition: 0.6s ease-in-out;
-}
-
-#card:hover {
-  transform: rotateX(20deg) rotateY(0deg) rotateZ(0deg);
+  position: relative;
+  z-index: 2;
+  left: 50%;
+  transform: translateX(-150px);
+  transition: left 0.7s linear;
 }
 
 #social-media {
@@ -103,14 +109,14 @@ main {
   margin-top: 10%;
 }
 
-#description {
+#card #description {
   width: 65%;
   margin-left: 17.5%;
   border-radius: 0.5rem;
   background: rgba(19, 19, 19, 0.2);
 }
 
-#description p {
+#card #description p {
   text-align: center;
   color: white;
   font-size: 1rem;
@@ -151,12 +157,94 @@ main {
   margin-top: 1rem;
 }
 
-#presentation section:nth-child(2) {
+#infos {
+  font-family: "Inter", sans-serif;
+}
+
+@keyframes animPresentation {
+  0% {
+    opacity: 0;
+    transform: translateX(-80px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+#infos #presentation {
+  display: none;
+  position: relative;
+  z-index: 1;
+  opacity: 1;
   width: 60%;
   margin-left: 5%;
-  margin-top: 2%;
-  display: inline-block;
+  margin-top: 9%;
   vertical-align: top;
+  background: rgba(19, 19, 19, 0.2);
+  padding: 1rem;
+  color: white;
+  border-radius: 1rem;
+}
+
+@keyframes animationContentPresentation {
+  0% {
+    opacity: 0;
+    transform: translateX(-60px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+#presentation p,
+#presentation h2 {
+  opacity: 1;
+  transition: transform 0.5s linear;
+}
+
+#infos #presentation p {
+  text-align: justify;
+}
+
+#infos #presentation h2 {
+  text-align: center;
+  color: white;
+  margin-bottom: 1rem;
+}
+
+#infos #presentation h2:hover {
+  background-color: transparent;
+}
+
+#content .showingDiv h2 {
+  background: linear-gradient(
+    140deg,
+    rgba(0, 0, 255, 1) 0%,
+    rgba(200, 200, 200, 1) 14%,
+    rgba(200, 200, 200, 1) 73%,
+    rgba(255, 0, 0, 1) 100%
+  );
+  color: black;
+}
+
+#content .showingDiv p {
+  font-family: "Inter", sans-serif;
+  text-align: justify;
+  font-size: 1.3rem;
+}
+
+#content .showingDiv div {
+  background: linear-gradient(
+    140deg,
+    rgba(0, 0, 255, 1) 0%,
+    rgba(200, 200, 200, 1) 8%,
+    rgba(200, 200, 200, 1) 92%,
+    rgba(255, 0, 0, 1) 100%
+  );
 }
 
 /* FOOTER */
