--- a/css/content.css
+++ b/css/content.css
@@ -37,12 +37,13 @@ main {
   font-size: 1.1rem;
   padding: 2rem 1rem 2rem 1rem;
   background-color: rgb(253, 253, 253, 0.9);
-  border-radius: 5px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 
 #content p {
   font-family: "Inter", sans-serif;
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   text-align: justify;
 }
 
@@ -52,6 +53,7 @@ main {
 
 #contentTitle {
   text-align: center;
+  color: white;
 }
 
 #contentTitle h2:hover {
