--- a/css/content.css
+++ b/css/content.css
@@ -12,7 +12,7 @@ main {
   overflow: hidden;
 }
 
-#content .showingDiv h2 {
+.showingDiv h2 {
   color: var(--black);
   font-size: 1.6rem;
   background-color: var(--yellow);
@@ -21,13 +21,13 @@ main {
   cursor: url("../images/cursors/Belgium_Flag_Pointer.png"), pointer;
 }
 
-#content .showingDiv {
+.showingDiv {
   margin-bottom: 1rem;
   overflow: hidden;
   transition: max-height 0.6s ease-in-out;
 }
 
-#content h2:hover {
+.showingDiv h2:hover {
   color: white;
   background: linear-gradient(
     130deg,
@@ -37,7 +37,7 @@ main {
   );
 }
 
-#content .showingDiv div {
+.showingDiv div {
   display: inline-block;
   width: 100%;
   font-size: 1.1rem;
