--- a/css/interview.css
+++ b/css/interview.css
@@ -52,6 +52,41 @@ header nav li a:hover {
 header nav li a.selected {
   color: var(--red);
 }
+
+#entreprise{
+  position: relative;
+}
+
+#entreprise:hover #menuEntreprise{
+  display: block;
+}
+
+#entreprise #menuEntreprise:hover{
+  display: block;
+}
+
+#menuEntreprise{
+  display: none;
+  position: absolute;
+  background-color: var(--blackMenuList);
+  padding: 15% 0.5rem 0.5rem 1rem;
+  border-bottom-left-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
+  top: 100%;
+}
+
+#menuEntreprise li a{
+  font-size: 1.25rem;
+}
+
+#menuEntreprise li::before{
+  content: "-";
+  position: absolute;
+  color: white;
+  font-weight: bold;
+  font-size: 1.25rem;
+  left: 6%;
+}
 /* MAIN */
 
 main {
@@ -301,6 +336,15 @@ footer {
   height: 45vh;
   z-index: 1;
   background-color: var(--footer);
+}
+
+footer section{
+  position: relative;
+  z-index: 2;
+}
+
+footer li a.selected {
+  color: var(--red);
 }
 
 #skyline {
