--- a/css/interview.css
+++ b/css/interview.css
@@ -304,6 +304,25 @@ main {
   );
 }
 
+/* Conclusion */
+#conclusion{
+  background-color: rgb(220,220,220);
+  padding: 0 1rem 1rem 1rem;
+}
+
+#conclusion p{
+  margin-top: 1rem;
+  text-align: center;
+}
+
+#conclusion h2{
+  text-align: center;
+  font-size: 2.5rem;
+  padding-top: 1rem;
+  text-transform: uppercase;
+  text-decoration: underline;
+}
+
 /* FOOTER */
 
 @keyframes cloud {
